k8s/frontend-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: passgen-app
  labels:
    app: frontend
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      nodePort: 30080
